Fixed some minor layout issues

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -60,8 +60,9 @@ header {
     .man {
         #man-1 {
             position: absolute;
-            top: 50%;
+            top: 60%;
             left: 2%;
+            height: 150px;
         }
         #man-2 {
             position: absolute;
@@ -71,6 +72,7 @@ header {
         #man-3 {
             position: absolute;
             top: 20%;
+            height: 150px;
             right: 60px;
         }
     }
@@ -105,7 +107,7 @@ header {
             #man-3 {
                 position: absolute;
                 width: 30% !important;
-                top: 10%;
+                top: 15%;
                 right: 30px;
             }
         }
@@ -177,15 +179,15 @@ header {
         url(/img/img2.jpg);
     background-size: cover;
     background-attachment: fixed;
-    height: 80vh;
+    height: 100vh;
     font-family: "Luckiest Guy", cursive;
     color: #fff;
     z-index: 1000;
     background-position: center;
 
-    @media (max-width: $mobile) {
-        height: 100vh;
-    }
+    // @media (max-width: $mobile) {
+    //     height: 100vh;
+    // }
 
     .countdown-title {
         text-align: center;
